syntax = "proto3";
option java_package = "sangong.mode";
import "gameBase.proto";

//房卡模式进入房间请求
message RoomCardIntoRequest {
    string Id = 1; //用户
    string roomNo = 2; //房号
}

//进入房间返回
message RoomCardIntoResponse {
    ErrorCode error = 1;
    float baseScore = 2; //基础分
    string roomNo = 3; //桌号
}

//所有玩家信息
message RoomSeatsInfo {
    repeated SeatResponse seats = 1; //座位
}

//游戏信息
message GameInfo {
    GameStatus gameStatus = 1; //游戏状态
    string operationUser = 2; //当前操作的人
    string lastOperationUser = 3; //上家出牌人
    repeated SeatGameInfo seats = 4; //座位
}

//玩家信息
message SeatResponse {
    uint32 seatNo = 1; //座位号
    string ID = 2; //用户
    string nickname = 3; //用户
    int32 gold = 4; //金币
    bool isReady = 5; //是否准备
    string areaString = 6; //地区
}

//玩家游戏信息
message SeatGameInfo {
    string ID = 1; //用户
    repeated uint32 cards = 2; //牌
    uint32 cardsSize = 3; //牌数量
    int32 score = 4; //输赢分数
    bool isRobot = 5; //是否托管
}

//抢庄
message GrabRequest {
    bool grab = 1; //是否抢庄
}

//抢庄
message GrabResponse {
    string ID = 1; //用户
    bool grab = 2; //是否抢庄
}

//发牌
message DealCardResponse {
    repeated uint32 cards = 1; //牌
}

//开牌
message OpenCardResponse {
    string ID = 1; //用户
    repeated uint32 cards = 2; //牌
}

//下注
message PlayScoreRequest {
    uint32 score = 1; //下注分数
}

//下注
message PlayScoreResponse {
    string ID = 1; //用户
    uint32 score = 2; //下注分数
}

//喇叭
message MessageRequest {
    string message = 1; //内容
}

//当局游戏结果
message ResultResponse {
    Result result = 1; //结算
}

//游戏结果
message Result {
    string ID = 1; //人
    float score = 2; //结算
    repeated uint32 cards = 3; //牌
}

//喇叭
message MessageResponse {
    string message = 1; //内容
}

enum GameStatus {
    WAITING = 0; //等待开始
    READYING = 1; //准备状态
    PLAYING = 2; //游戏中
}